1.0 "Asieoniezi"

0.119 "Karma Hunters"
 372241 pan crashes on some malformed charset messages. (Artur Jachacy)
 371720 references: field breaks threads in thunderbird (Frederic Crozat)
 371453 priority for post isn't high enough (Frederic Crozat)
 370930 speed up header pane filtering (Vincent Dupaquis)
 370195 uulib/fptools.c crash (António Godinho)
 363166 IPv6: no IPv4 fallback (Pav Lucistnik)

0.118 "Gustaf Von Musterhausen"
 358061 try to make multiple connections at once. (Duncan)
 360375 non-ascii subject is mangled (F. Crozat)
 361448 make statusbar use less vertical space (Michael Monreal)
 362436 retrieving group list runs forever (Guilhèm Bonnefille, Søren Boll Overgaard)
 364357 repeated server error messages (J. D. McKim)
 365990 pan doesn't encode sender when sending (Christophe)
 363268 mixed-charset messages get garbled (Michael Rasmussen)
 366542 crash with "ignore thread" when no thread selected
 366663 sort history is not maintained when "flipping" a column (Chris Petersen)
 366665 author with @ in "real name" gets chopped up (Chris Petersen)
 367578 crash when subscribing to an allready subscribed group. (Axion)
 369008 make crc32 checking 50% faster (Charles)

0.117 "We'll fly and we'll fall and we'll burn"
 361941 Slow download / Download corrupted in 0.116, fix included (Stéphane BERTHELOT)
 355047 article download becomes saving after restart (K Haley, Duncan)
 360406 pop up a message when post is refused by server (Frederic Crozat)
 361121 pan icon love (Michael Monreal)
 361445 Headers pane always has a scrollbar (Michael Monreal)
 361885 Cannot background compose window (Ken Bloom)
 354831 Pan silently removes characters when sending articles (Artur Jachacy)

0.116 "Blanton's"
 360375 non-ascii subject is mangled
 357735 crash when updating headers (David Kelly)
 358061 better use of server connections. (Adam Huffman)
 359197 speed up downloads from news server. (Avi Drissman, Christophe GISQUET)