@@ -1,12 +1,15 @@
 1.0 "Asieoniezi"
 
 0.119 "Karma Hunters"
+ 373193 'get headers' menu adds xover task to bottom of queue (Bigfoot)
+ 372616 Cancel / Supercedes is unable to recognize my articles (Frederic Crozat)
  372241 pan crashes on some malformed charset messages. (Artur Jachacy)
  371720 references: field breaks threads in thunderbird (Frederic Crozat)
  371453 priority for post isn't high enough (Frederic Crozat)
  370930 speed up header pane filtering (Vincent Dupaquis)
  370195 uulib/fptools.c crash (António Godinho)
  363166 IPv6: no IPv4 fallback (Pav Lucistnik)
+ 355805 add option to mark group read before getting new headers (Brad Hudson)
 
 0.118 "Gustaf Von Musterhausen"
  358061 try to make multiple connections at once. (Duncan)
